NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- driverless: Added "--std-ipp-uris" command line option to
	  show listed URIs in standard hostname-based form (not the
	  CUPS DNS-SD-service-name-based form. Only for manual call of
	  the utility, for debugging purposes (Pull request #277).
	- libfontembed: Removed assert() calls which cause crashes
	  when unsupported emoji fonts are installed (Issue #254, Pull
	  request #276).
	- driverless: Added support for IPPS (use "ipps://..." URIs if
	  possible, Issue #251, Pull request #270, #273).
	- libcupsfilters, pdftops: Moved core functionality of pdftops
	  into the pdftops() filter function.
	- libcupsfilters, bannertopdf, gstoraster, pdftops: Moved
	  common PDF/QPDF functions (pdf.cxx/pdf.h) into
	  libcupsfilters.
	- libcupsfilters, bannertopdf, sys5ippprinter, texttotext,
	  pdftops: Moved portability implementations (getline.c,
	  strcasestr.c) into libcupsfilters.
	- libcupsfilters, pstops: Added filterCUPSWrapper()
	  convenience function to easily create a classic CUPS filter
	  from a filter function.
	- gstoraster, gstopdf: When converting PostScript to PDF use
	  the "pdfwrite" output device with "-dPDFSETTINGS=/default"
	  instead of with "-dPDFSETTINGS=/printer". This reproduces
	  bitmaps in the PostScript file with their original image
	  quality (Issue #272).
	- pdftops: Replaced the external program call of CUPS' pstops
	  filter by the pstops() filter function of libcupsfilters.
	- lincupsfilters: Added the filter functions concept and added
	  CUPS' pstops filter as the first working model of a filter
	  function. All filters will get converted into filter
	  functions to make it easier to use them in Printer
	  Applications.
	- cups-browsed: Limit log file size and add backup file for
	  previous log entries. Introduced the configuration option
	  DebugLogFileSize in cups-browsed.conf to set the actual